# modern-python-template

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
